# ChangeLog for sys-devel/bison
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/bison/ChangeLog,v 1.111 2012/06/06 14:34:23 ssuominen Exp $

*bison-2.5.1 (06 Jun 2012)

  06 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +bison-2.5.1.ebuild:
  Version bump.

  24 May 2012; Mike Frysinger <vapier@gentoo.org> bison-2.4.2.ebuild,
  bison-2.5.ebuild:
  Inherit eutils for epatch, and flag-o-matic for append-ldflags.

  26 Apr 2012; Alexis Ballier <aballier@gentoo.org> bison-2.5.ebuild:
  keyword ~amd64-fbsd

  17 Aug 2011; Matt Turner <mattst88@gentoo.org> bison-2.4.2.ebuild,
  bison-2.4.3.ebuild, bison-2.5.ebuild:
  In fact, m4 should be in DEPEND as well, bug 379351.

  07 Aug 2011; Mike Frysinger <vapier@gentoo.org> bison-2.5.ebuild:
  Clean up dead yacc symlink on unmerge #377469 by Michael.

  31 Jul 2011; Matt Turner <mattst88@gentoo.org> bison-2.5.ebuild:
  Bump m4 requirement to 1.4.16, bug 375637. Also move it from RDEPEND back to
  DEPEND. It was originally moved in 2006 as a hack.

  08 Jun 2011; Kacper Kowalik <xarthisius@gentoo.org> bison-2.4.3.ebuild:
  ppc64 stable wrt #367575

  05 Jun 2011; Raúl Porcel <armin76@gentoo.org> bison-2.4.3.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #367575

  24 May 2011; Brent Baude <ranger@gentoo.org> bison-2.4.3.ebuild:
  Marking bison-2.4.3 ppc for bug 367575

  22 May 2011; Markus Meier <maekke@gentoo.org> bison-2.4.3.ebuild:
  arm stable, bug #367575

  19 May 2011; Markos Chandras <hwoarang@gentoo.org> bison-2.4.3.ebuild:
  Stable on amd64 wrt bug #367575

  18 May 2011; Jeroen Roovers <jer@gentoo.org> bison-2.4.3.ebuild:
  Stable for HPPA (bug #367575).

  17 May 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> bison-2.4.3.ebuild:
  x86 stable wrt bug #367575

*bison-2.5 (16 May 2011)

  16 May 2011; Mike Frysinger <vapier@gentoo.org> +bison-2.5.ebuild:
  Version bump #367459 by taaroa.
