@@ -1,28 +1,30 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA256
 
-AUX bison-1.32-extfix.patch 1170 RMD160 41daa5ee80712e419a15233af15efbd174ac1adf SHA1 a7cab61f53ca9d9d97b99c8687df1f092e1c1dbc SHA256 a47285e1b6f1ee53b8def53380068ad6a86ccd09e3338481f6d3d14c7e8b31c4
-AUX bison-2.4-compat.patch 5896 RMD160 05f2e2db641baa2b24352e41e07bc116e05499e9 SHA1 98fea4f2a470bd65d0b29001fb35d1632c6156fe SHA256 7228583e34f08e643269161a073aa5e0d3a8157bf8f043ca3ad62542d1cdd425
-AUX bison-2.4.2-gcc45_testsuite.patch 2545 RMD160 b96e24f8036f20f9b159a298b500f3a1b47f8de2 SHA1 e1e63e218b3bf255fa8f9beb499ca6ddc99d24d7 SHA256 371642548b0b9f32bce58e5e293298e27384117483ed3cf5e55180b699fcd481
-AUX bison-2.4.2-gnulib_spawn.patch 2667 RMD160 14cc23973b695702f61cf3c69dc492cb81cb193b SHA1 eeb124b49a9ae10e11cfaa0ec2fc073a80c07ea5 SHA256 3ad044de9d80449859a73d805accc2481c362c5bce6421f7336509f02e1ee39d
-AUX bison-2.4.3-uclibc-sched_param-def.patch 580 RMD160 2bcea0eb33aaef5ae5f9046a36385af7a9194865 SHA1 e3c94913eaaf8a280e598353f89ef46119dd3f94 SHA256 b111051eaaa15ce6e53ae168d06e0fb9688c70141060abfe0a15c5d1400fbaf9
-AUX bison-2.5-interix.patch 792 RMD160 4cf5085de12fa8956a92b3f505798a695583881e SHA1 c25aa5bbdd143f14fbb8558ab1782ce5db53f8bd SHA256 9c3f13649148adf2167c268a60cab2dc3dd0f3dcf0542364deae7b4f463ae145
-DIST bison-1.875d.tar.bz2 882745 RMD160 37ab2ea1df81021c481625794938dcdacc09e4d2 SHA1 cf17c4f2df1344ee93bcc5c336f691db831d1ab5 SHA256 37ff8d673e35838c195d614bc402573d1268c997796e79b831053f4a22e03808
-DIST bison-2.4.2.tar.bz2 1616117 RMD160 bc72359a93ad36ae60e8027d846211cb99634d93 SHA1 4e2c4b40a248748989b3fe7f0d89022ea11a8d6f SHA256 57fb243aa9af04a6a57c4f4d9167f4440059fe923817f1fdf5592ab892af4fb8
-DIST bison-2.4.3.tar.bz2 1652612 RMD160 7ff76f7c75a9989ab9227cd291c6f75af8a6558d SHA1 2345d568c1ab7fdfbf4e3ae9e08fc8a82790ba3a SHA256 935302ef194c7f0974fed913eaac8100be512094eab573cf0b67bdf7db1d3a05
-DIST bison-2.5.1.tar.xz 1608376 RMD160 45c2c6fa232bf9697e73653722d51759f284bbd4 SHA1 4cd881033f4a66cf691462b0f2d8293aa712a781 SHA256 fec90caed650270484955ba6ee73ddb01186608799a27fcaaf868e5274c030d8
-DIST bison-2.5.tar.bz2 2030863 RMD160 9f90e477c9c397a8b136aa7bcee887767d94eea7 SHA1 907319624fe4f4c5f9e2c3e23601041ac636ae31 SHA256 0a370df6ee2b23e9ec3043e1ab78878241aa008ec424926294dd4cb3475439b8
-EBUILD bison-1.875d.ebuild 1797 RMD160 d197b0ddc1f429a82d6c5961726f080510287b99 SHA1 6535a69a3bc306b31702d07eb01e2131b84f467f SHA256 2839114a5800fd88078ff4134643626f7cbb258b1654c1677cf0eae549b725ae
-EBUILD bison-2.4.2.ebuild 1486 RMD160 a51aa916231431305f1e145b613aa05c7d8f84a2 SHA1 e20c53261328d7b89f0b1941f215400f7e1a937e SHA256 dcd3e135f26e224f56fd33394b0521b22d383dbdd34917fa2165accc58e75531
-EBUILD bison-2.4.3.ebuild 1322 RMD160 39d80c8c8cc474fb94950f4cc534845510775b7f SHA1 8884306e9dd039e9f055d004dedf73dda71580a5 SHA256 640ed7b7748d964e8759dbe4e8e1b9f320b250220c9372489bb3f2fa2883039f
-EBUILD bison-2.5.1.ebuild 1643 RMD160 fc846453dc7be22afa0f6959b79dc0c4fe6e82ab SHA1 dcb015e0106fb6c299ef567bdf9910cb1d663c47 SHA256 d2b3da907b48f99810fa0a0bbf74d458442b6fc47d2f6f16f6b930697469a3e5
-EBUILD bison-2.5.ebuild 1519 RMD160 06ef34508f15c22fb8ced6f284b1ff1e142012da SHA1 32be830ac8217b37827377a8bc4d5477e8d2eb25 SHA256 4ec09a7a3097caf9fbfaecb85773506e43c462bccc0c050873cd1ba0b3e148c3
-MISC ChangeLog 14835 RMD160 a5f99f6077605c60b03397fbd1c06085832741f4 SHA1 728c6bcda13639043a3cf7035bf7c9fed77a88f2 SHA256 a3de897c53264c36bf524bdc61bacbec29544c42235a08556b3fa714f2bc44c0
-MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
+AUX bison-1.32-extfix.patch 1170 SHA256 a47285e1b6f1ee53b8def53380068ad6a86ccd09e3338481f6d3d14c7e8b31c4 SHA512 6f98d6ea4d6564c3890ede54994654af87d79a87e615e03856a71f3470876fe42768deeabe31f9393531a35619a7e00844ff2a3d87214754cfd04a25d591cc57 WHIRLPOOL 800744be43d9dc39ba4c7cba4342ee5c2360cf9792c0ff5971da91fe78df85358ac1b7cab5c32244898b69ced352ce159685daa80cf32317db4ab92610b2153d
+AUX bison-2.4-compat.patch 5896 SHA256 7228583e34f08e643269161a073aa5e0d3a8157bf8f043ca3ad62542d1cdd425 SHA512 d6457e5b69b19c44ee26ec7c76c04bfdacebb955435f7dce949d6d9eea8c227cd5214182e1f6cb6fa226d373933ce25035c63341d9d837b4e97c558e1661ce81 WHIRLPOOL ea66f4a11bdc2a9e6241b0202ec7c39b6bac46c43e37e7ab441e98b8bb867af2d688514d0c938da2dc1e3ddfd2344b86d93c0f86b8eae44d92fb3bad9502abf9
+AUX bison-2.4.2-gcc45_testsuite.patch 2545 SHA256 371642548b0b9f32bce58e5e293298e27384117483ed3cf5e55180b699fcd481 SHA512 babab2944f3555bd141d9ddf4b72241dab9e7d4216e8d8ada5b042c31953bd9a2caff2333aec4a685f516397e2f900ed05ef8b3864d098ffea8afc639104d37e WHIRLPOOL e6465ddc0b26e01a272f8af5d68a61aa077688b96908f2ce15888d0ee1b08a6a62f7b0b4a2871f4da6b64e53d4dc6ee5f031a76f042cffcdbaa4ec69aef8b7d5
+AUX bison-2.4.2-gnulib_spawn.patch 2667 SHA256 3ad044de9d80449859a73d805accc2481c362c5bce6421f7336509f02e1ee39d SHA512 c2270bca1bdb07501c749ed8e04cfab7a3b5a81ce12bd0458ba4b870db824af30eee694e8bce7d97488acf61fcfaa2e6658d5449b393147c34d77ce07b9d438e WHIRLPOOL 1f8c03d3bb191c9e3aa3dc10a0bb04fb2d9179e450fb7ea451680f62a7ec233a50017c01618be19ab76010be27cb527f3f815fcf3e3b4b8478bf99a8b116ea70
+AUX bison-2.4.3-uclibc-sched_param-def.patch 580 SHA256 b111051eaaa15ce6e53ae168d06e0fb9688c70141060abfe0a15c5d1400fbaf9 SHA512 87a49e69aec0b36313132fc7a9fb520016e4dc4399a9af9a91636a588326825de3a65dd6bcdda8de20e364ec163afcb41b0453f09ce4102d179ce04279c8654d WHIRLPOOL 5f0d690078d004231d31adcbdea98c3f3059c60265595ac46cbb0d4e45638ae9e54c9ee08040842d278a4ddadd5744a6bce19753475978cf7360ce8bf2be9d7b
+AUX bison-2.5-interix.patch 792 SHA256 9c3f13649148adf2167c268a60cab2dc3dd0f3dcf0542364deae7b4f463ae145 SHA512 f6d4e23f4199f3878d77b9cc0451ec11523eea79173fa0bb772531ea617f05bb8f092c805e90235c9155828b503dcedbbf6c706225af2dcccd0d500f4cf2f0f8 WHIRLPOOL 9c79265185ce351f794b773a0fdbc24db56b8f372c4238583f25c3b08d60f51e4baa636dc288616d234e38def84b6aaabbc237fa0e6f97c32ce1847ce47acaf8
+DIST bison-1.875d.tar.bz2 882745 SHA256 37ff8d673e35838c195d614bc402573d1268c997796e79b831053f4a22e03808 SHA512 f84c6cf41a289ea7e0805cf9b0da6fe2d77f2e03a35c3db7d2e36e5186bba7c0853c3d518bd89f6cfa1030e346e046aa03b33974bb892dbd8f040e5ea2de1126 WHIRLPOOL 213e02b33b4cd65c4c8ad5a37b77cce75a366e1d5ad0837887763c75c5e30eb3d85b7ba8eb71ed86bb86fb3e23624a7c627558f492778ec29e6e79fd30e7c902
+DIST bison-2.4.2.tar.bz2 1616117 SHA256 57fb243aa9af04a6a57c4f4d9167f4440059fe923817f1fdf5592ab892af4fb8 SHA512 428c6e6f9623d0f3d483f5eedb5f70dd58e19f8f844ffd0e0bc0765a648cce58639308ac47bc6e78633f609620fa0e86d2b8b0c20f855d3ca042cf70c0e43f7c WHIRLPOOL bfc6f12155ff2037ea2fae3f93bd830fe696e20a61f93432ec5684e883bb5aee5fcc5b8502f146e361b0e3f7194eddaebd53cb352b2948ae58d65e717e6c5bab
+DIST bison-2.4.3.tar.bz2 1652612 SHA256 935302ef194c7f0974fed913eaac8100be512094eab573cf0b67bdf7db1d3a05 SHA512 b789f55d9cb95c1b4fba004691ed9f79b76da55020c9b202e1704a02aab1ba43b9fc1015e29843ed552e6df6165cef9c6ebc8a29d15a21c6e194cad8a42ab055 WHIRLPOOL 0e0e61970a791e53afc6cc85f53cebf0050d885077dd9b2394d79549bac389ffa7e477e003525556858b6fa64c11ce93653bba1c861bd2acd67f85181e167558
+DIST bison-2.5.1.tar.xz 1608376 SHA256 fec90caed650270484955ba6ee73ddb01186608799a27fcaaf868e5274c030d8 SHA512 f63264023d602612df7856e551e277572e1184e5c35eb68fcfd9144bf10053875d96ac248857e9bdf81bb33f6a94f640b8850b1aeb5d37b18a51045561799f13 WHIRLPOOL 31076a38f63d0cfa2b96fd2a564ee650f42cbaaeddc92801fa232d429b3b8187828caab036fc55283b8d533f001312aae1cdf7efd87f383aa71294e7328b013d
+DIST bison-2.5.tar.bz2 2030863 SHA256 0a370df6ee2b23e9ec3043e1ab78878241aa008ec424926294dd4cb3475439b8 SHA512 4a7b381af60f9308ee827ac2669b797fbe88f3fd55d5c35f993e315147701cbad10570e1f3ce73adb1b6c623dd0db1405371873a508d83eaa7c7d2610a59d95e WHIRLPOOL 4294d36ebe50f1d283125d16cffdf81e39ac6a3a91ec06a3a1bf7a47688cd063b6d0a04e091dfe28cbf3d7ba09fcc7f539ebe6dab0ee4092a8cb841e4ec18af7
+DIST bison-2.6.tar.xz 1639796 SHA256 6dde6668484acb66267c74174f0cf850bd1be01f6e94850b9bd86ea2046a87a1 SHA512 125e8a66bd9ac619e5fe11ab4ff655d459da46f884488513c029ff8da72bb57c5397997dd56d81423a0dc409dddeee88906baf991f7b028120ee8ef19ae677b9 WHIRLPOOL 121f309d4654c249fb1b78c9ebe2fb3575100d455690cefea425bd7dadd8668e86789f4b610da6393ca6e8e0d8129b1df8790d9572733d99af93908008d05ae3
+EBUILD bison-1.875d.ebuild 1797 SHA256 2839114a5800fd88078ff4134643626f7cbb258b1654c1677cf0eae549b725ae SHA512 9fcfd71531aa444b22157dffc3416862525bf269a22880a82ed8bdaf6ff729a05aa228df88b3c26da2cdb685d1bdb1030fe9ae996b297885d601aba2649b1626 WHIRLPOOL 6b1ae1294b9a6479dae7cae3e785c37badf71822f4b8d7f97b7eaf898297530c01ddfdb6d631ba8226804c26fd9dc88970d149e31ac5cc4934e65e091052b529
+EBUILD bison-2.4.2.ebuild 1486 SHA256 dcd3e135f26e224f56fd33394b0521b22d383dbdd34917fa2165accc58e75531 SHA512 df073cd8791eea309ef8bce4977b7140f3f902ee4c2026da800a5bf29f50e155681438a170eb35dee8329e7f23af2273590f615d6f7f6697ecb71759fa5ad598 WHIRLPOOL 75b9310ea8304cfe9a85f194be03a2d1db5555fcd743a466446bf97a45269ce66f5e0f5b4cf1fb5a7f47365598695c434586430bd0a89ffc9769b8263fad9d33
+EBUILD bison-2.4.3.ebuild 1322 SHA256 640ed7b7748d964e8759dbe4e8e1b9f320b250220c9372489bb3f2fa2883039f SHA512 84ba1507053c6f5e40e7123a2c22ac6d8db830bda92f38d30fa141e35b59585a39ab4be84be4867cfa49a6adb006c0e3bc6f93d49cde7fadbd96f48facf51e01 WHIRLPOOL e5c653c402be7d95ee5ee5474738b37db339b43f907e975a5c133b052d1c1d71da781ab779e083d7dde78f98f51868fc8685e3196db8a4c094e6f59c0d1016cb
+EBUILD bison-2.5.1.ebuild 1643 SHA256 d2b3da907b48f99810fa0a0bbf74d458442b6fc47d2f6f16f6b930697469a3e5 SHA512 2ace2877651eef6c7569ef9d2c10c779d206c332e74781cba04bcbba5174e54055939c170e381423023fb61c058e8ad09850a4b49c89fb9f88a349cb5c13cfa9 WHIRLPOOL d545ec08dcfd025921d7c0ad533f62d73bff2d52a6c1cea84d96c50b6d51fe52ff8502a5eed4b2bbe0f64a4c116660dd0355f4243dd52e3cc9554a535934e9ed
+EBUILD bison-2.5.ebuild 1519 SHA256 4ec09a7a3097caf9fbfaecb85773506e43c462bccc0c050873cd1ba0b3e148c3 SHA512 27f260d7f5c5582fc3ec0d0d586595c67c69d7ee47de1968a4b5740dc932f531e9bea1b9c17d06d37c41e4b6b58691eb27cab0b4d5084f0a1530b02fa4107bcb WHIRLPOOL 325023c4422f3dcb54d9683702a45abf430c41b1bcb83184324117ef8858af87f67b33e80fd2aae439f1f0534ee1a763d42fec956e2627cacad06b8ed16622b3
+EBUILD bison-2.6.ebuild 1641 SHA256 ffb584295ca4d0437806d7286fc80face0000904bf0cf658e98dc98df5d6a9db SHA512 29eeeaa342009811eded6c3eef9c31b481808e7d155bb6bb14bcadc707b363bb0a893abfd00a38d19f938a68c61bdbb15c5da9bb31b739f77fbfbd88a346fd45 WHIRLPOOL 63d0179823cc08d1351b93203b2affd9e6fac54a8fa25582be19c7f9dcec45bec72d5d6d97ff18a2903a3389967df2876d5bffa7fec4bdf2afeebc57c1492472
+MISC ChangeLog 14946 SHA256 18f55609a07acd3974ee0f4bcd02db1870326c647db2811c764bc0d9df1172b0 SHA512 0313c766565b00247efc09849f6bd8f29e7c1ce0490a83e81f9384ae292a9472ac26b3882a59be64b9ea058c320b20208e1093181bee1a10de9c39e93a21de09 WHIRLPOOL 0140953e5bc8c48a5a34cb0bb85aedeb6dde3db237b6d0d24753c4b18bd7000863a50dc8d7e9075cf4b472d889649d9c1312009753c0b244a91b4791303ce76e
+MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (SunOS)
+Version: GnuPG v2.0.19 (Darwin)
 
-iEYEARECAAYFAk/Xo64ACgkQX3X2B8XHTokKfwCgl9mNa1RuVoAHI+QZ4bVB+Z7o
-8oMAnjQuF4MEAS04eoZpP1kohDdpagcm
-=JZa+
+iEYEAREIAAYFAlAYJ68ACgkQX3X2B8XHTonBpgCffWhpKayebb250FQGQGO+RSip
+9BgAn0nsbkZp6IE/T/Od6O0PNVrUEBqn
+=54fP
 -----END PGP SIGNATURE-----
