@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/bison
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/bison/ChangeLog,v 1.111 2012/06/06 14:34:23 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/bison/ChangeLog,v 1.112 2012/07/20 08:18:03 radhermit Exp $
+
+*bison-2.6 (20 Jul 2012)
+
+  20 Jul 2012; Tim Harder <radhermit@gentoo.org> +bison-2.6.ebuild:
+  Version bump.
 
 *bison-2.5.1 (06 Jun 2012)
 
